create tp1 variables

--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <title>Critique du film de Demon Slayer</title>
 
     <style>
-        :root {--accent: #c0392b; }
-        body{ background: #f8f9fb; color: #212529}
+        :root{ --accent:#c0392b; }
+        body{ background:#f8f9fb; color:#212529; }
+        .site-header{ background:linear-gradient(90deg, rgba(0,0,0,0.03), transparent); border-bottom:1px solid rgba(0,0,0,0.04); }
+        .site-title{ font-weight:700; letter-spacing:0.6px; }
+        .article-hero{ background:linear-gradient(180deg, rgba(0,0,0,0.02), transparent); padding:2.5rem; border-radius:.5rem; }
+        .rating-badge{ background:var(--accent); color:white; font-weight:700; border-radius:.75rem; padding:.35rem .7rem; display:inline-block; }
+        .meta { color:#6c757d; font-size:.95rem; }
+        .categories .badge{ margin-right:.25rem; margin-bottom:.25rem; }
+        .related-card img{ object-fit:cover; height:140px; width:100%; border-radius:.35rem; }
+        footer{ padding:2rem 0; color:#6c757d; }
+        @media(min-width:992px){ .article-hero{ padding:3rem; } }
     </style>
 </head>
 <body>
