--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <title>Critique du film de Demon Slayer</title>
 
     <style>
@@ -20,6 +22,22 @@
     </style>
 </head>
 <body>
-    
+  <header class="site-header py-3">
+    <div class="container d-flex align-items-center justify-content-between">
+      <div class="d-flex align-items-center gap-3">
+        <div class="rounded-circle bg-danger" style="width:46px;height:46px;"></div>
+        <div>
+          <div class="site-title h5 mb-0">Critique</div>
+          <small class="text-muted">Spires d'une critique cardinale</small>
+        </div>
+      </div>
+      <nav>
+        <a href="#" class="me-3 text-decoration-none text-dark">Articles</a>
+        <a href="#categories" class="text-decoration-none text-dark">Catégories</a>
+      </nav>
+    </div>
+  </header>
+
+  
 </body>
 </html>
