--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
     </style>
 </head>
 <body>
+  <body>
   <header class="site-header py-3">
     <div class="container d-flex align-items-center justify-content-between">
       <div class="d-flex align-items-center gap-3">
-        <div class="rounded-circle bg-danger" style="width:46px;height:46px;"></div>
+        <div class="rounded-circle bg-danger" style="width: 46px; height: 46px;"></div>
         <div>
           <div class="site-title h5 mb-0">Critique</div>
           <small class="text-muted">Spires d'une critique cardinale</small>
@@ -37,6 +38,103 @@
       </nav>
     </div>
   </header>
+
+  <main class="container my-5">
+    <div class="row g-4">
+      <div class="col-lg-8">
+        <article class="article-hero">
+          <h1 class="mb-1">Demon Slayer: Infinity Castle – Une apothéose visuelle et émotionnelle</h1>
+          <div class="d-flex align-items-center justify-content-between mb-3">
+            <div class="meta">Sortie : Été 2025</div>
+            <div class="rating-badge">9.5/10</div>
+          </div>
+
+          <figure class="mb-3">
+            <img src="./images/demon-slayer.jpg" alt="Demon Slayer Infinity Castle" class="img-fluid rounded">
+            <figcaption class="text-muted small mt-2">Source : ufotable / Aniplex</figcaption>
+          </figure>
+
+          <p>
+            Après des années d’attente, <strong>Demon Slayer: Infinity Castle</strong> signe la conclusion tant attendue du chef-d’œuvre de Koyoharu Gotouge. 
+            Ce film, produit par <strong>ufotable</strong>, propulse les spectateurs dans le combat final entre les pourfendeurs et les démons de Muzan Kibutsuji. 
+            Une symphonie de couleurs, de sang et d’émotions — probablement l’une des adaptations les plus spectaculaires de l’histoire de l’animation japonaise.
+          </p>
+
+          <h4 class="mt-4">Une prouesse d’animation</h4>
+          <p>
+            L’équipe d’<strong>ufotable</strong> repousse ici toutes les limites de l’animation moderne. 
+            Les jeux de caméra, les transitions fluides et les combats multi-plans sont d’une précision hallucinante. 
+            Le Château de l’Infini lui-même devient un personnage, mouvant et imprévisible, accentuant la tension dramatique. 
+            Chaque affrontement est un tableau vivant digne d’un film d’auteur.
+          </p>
+
+          <figure class="mb-3">
+            <img src="./images/akaza looking at tanjiro.webp" alt="Tanjiro Infinity Castle Fight" class="img-fluid rounded">
+            <figcaption class="text-muted small mt-2">L'oeil d'Akaza regardant Tanjiro</figcaption>
+          </figure>
+
+          <h4 class="mt-4">Un récit d’une intensité rare</h4>
+          <p>
+            L’adaptation se distingue par un rythme tendu, quasi suffocant, qui ne laisse aucun répit au spectateur. 
+            Pourtant, au milieu de cette frénésie, le film prend le temps de rendre hommage à chaque pilier. 
+            Les adieux, souvent bouleversants, rappellent combien la saga a su tisser des liens émotionnels profonds avec son public.
+          </p>
+
+          <h4 class="mt-4">Une conclusion magistrale</h4>
+          <p>
+            Sans spoiler, <strong>Infinity Castle</strong> réussit à clôturer la série avec une élégance rare. 
+            La bande-son, portée par <em>Yuki Kajiura</em> et <em>Go Shiina</em>, soutient avec justesse les moments d’émotion et de tension. 
+            Le film se termine sur une note à la fois tragique et libératrice, marquant la fin d’une ère pour l’animation japonaise moderne.
+          </p>
+
+          <p>
+            Ce dernier chapitre consacre définitivement <em>Demon Slayer</em> comme une œuvre majeure. 
+            Entre performance technique, respect du matériau d’origine et puissance émotionnelle, 
+            <strong>Infinity Castle</strong> s’impose comme un adieu digne et inoubliable.
+          </p>
+
+          <div class="mt-4 d-flex align-items-center gap-3">
+            <div class="rating-badge">Chef-d’œuvre</div>
+            <div class="text-muted small">Note finale : <strong>9.5/10</strong></div>
+          </div>
+        </article>
+
+        <section id="categories" class="mt-5">
+          <h5>Catégories</h5>
+          <div class="categories mt-3">
+            <span class="badge bg-light border">Animation <span class="text-muted">8</span></span>
+            <span class="badge bg-light border">Action <span class="text-muted">10</span></span>
+            <span class="badge bg-light border">Fantastique <span class="text-muted">6</span></span>
+          </div>
+        </section>
+      </div>
+
+      <aside class="col-lg-4">
+        <div class="card p-3 mb-4">
+          <h6 class="mb-3">Articles similaires</h6>
+
+          <div class="related-card mb-3">
+            <img src="./images/jjk.jpg" alt="Jujutsu Kaisen" />
+            <div class="mt-2"><a href="#" class="stretched-link text-decoration-none">Jujutsu Kaisen : Le combat final de Gojo</a></div>
+            <div class="text-muted small mt-1">Décembre 2023</div>
+          </div>
+
+          <hr>
+
+          <div class="related-card mb-3">
+            <img src="./images/aot.jpg" alt="Attack on Titan Final Season" />
+            <div class="mt-2"><a href="#" class="stretched-link text-decoration-none">Attack on Titan : Une conclusion légendaire</a></div>
+            <div class="text-muted small mt-1">Novembre 2023</div>
+          </div>
+        </div>
+
+        <div class="card p-3">
+          <h6>À propos</h6>
+          <p class="small text-muted mb-0">2025 © Meow </p>
+        </div>
+      </aside>
+    </div>
+  </main>
 
   
 </body>
