--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@
     </div>
   </main>
 
-  
+  <footer class="container">
+    <div class="row">
+      <div class="col-12 text-center">
+        <small>I dont knowww </small>
+      </div>
+    </div>
+  </footer>
+
 </body>
 </html>
