--- a/index.html
+++ b/index.html
@@ -115,7 +115,6 @@
   </style>
 </head>
 <body>
-  <!-- Header -->
   <header class="hero">
     <div class="hero-content">
       <h1>Demon Slayer: Infinity Castle</h1>
@@ -123,10 +122,8 @@
     </div>
   </header>
 
-  <!-- Main -->
   <main class="container my-5">
     <div class="row g-4">
-      <!-- Article -->
       <div class="col-lg-8">
         <article class="article-hero">
           <div class="d-flex align-items-center justify-content-between mb-3">
@@ -186,7 +183,6 @@
         </section>
       </div>
 
-      <!-- Sidebar -->
       <aside class="col-lg-4">
         <div class="card bg-dark text-light p-3 mb-4 border-0">
           <h6 class="mb-3">Articles similaires</h6>
@@ -215,11 +211,7 @@
   </main>
 
   <footer class="container">
-    <div class="row">
-      <div class="col-12 text-center">
-        <small>I dont knowww </small>
-      </div>
-    </div>
+    <small>I don't knoww</small>
   </footer>
 
 </body>
