--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     .hero {
       position: relative;
-      background: url('./images/header-demonslayer.jpg') center/cover no-repeat;
+      background: url('./images/hashira.png') center/cover no-repeat;
       color: white;
       height: 60vh;
       display: flex;
