--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   </main>
 
   <footer class="container text-center py-3">
-    <small class="text-secondary">© 2025 Infinity Reviews – Tous droits réservés</small>
+    <small class="text-secondary">© 2025  don't know what I'm doing</small>
   </footer>
 
   <script src="/src/js/script.js"></script>
