--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@
     <div class="row g-4">
       <div class="col-md-8 col-lg-9">
         <article class="article-hero">
-          <div class="d-flex align-items-center justify-content-between mb-3">
-            <div class="text-secondary">Sortie : Été 2025</div>
-            <div class="badge bg-danger"><i class="bi bi-heart-fill me-1"></i>9.5/10</div>
-          </div>
+          <div class="text-secondary mb-3">Sortie : Été 2025</div>
 
           <p>
             Après des années d’attente, <strong>Demon Slayer: Infinity Castle</strong> vient clore en beauté l’épopée des pourfendeurs de démons.
