--- a/index.html
+++ b/index.html
@@ -4,14 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Demon Slayer: Infinity Castle – Critique</title>
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-
   <link rel="stylesheet" href="/src/css/style.css">
 </head>
 
@@ -26,7 +22,8 @@
     </div>
   </header>
 
-  <div class="modal fade" id="filmModal" tabindex="-1" aria-labelledby="filmModalLabel" aria-hidden="true">
+  <!--modal veut pas marcher je vais crash out-->
+  <div class="modal fade" id="filmmodal" tabindex="-1" aria-labelledby="filmModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg">
       <div class="modal-content bg-dark text-light">
         <div class="modal-header border-secondary">
@@ -44,22 +41,22 @@
     <div class="row g-4">
       <div class="col-md-8 col-lg-9">
         <article class="article-hero">
-          <div class="text-secondary mb-3">Sortie : Été 2025</div>
+          <div class="text-secondary mb-3">Sortie : Automne 2025</div>
 
           <p>
-            Après des années d’attente, <strong>Demon Slayer: Infinity Castle</strong> vient clore en beauté l’épopée des pourfendeurs de démons.
-            Réalisé par <strong>Haruo Sotozaki</strong> et produit par le studio <strong>ufotable</strong>, ce dernier chapitre transporte le spectateur au cœur du combat final contre <strong>Muzan Kibutsuji</strong>.
+            Après 1 an d’attente, <strong>Demon Slayer: Infinity Castle</strong> vient clore en beauté l’épopée des pourfendeurs de démons.
+            Réalisé par <strong>Haruo Sotozaki</strong> et produit par le studio <strong>ufotable</strong>, ce chapitre transporte le spectateur au cœur du combat final contre <strong>Tanjiro, Giyuu et Akaza</strong>.
             Une œuvre qui repousse les limites techniques et émotionnelles de l’animation japonaise moderne.
           </p>
 
           <figure class="mb-4">
             <img src="/assets/images/demon-slayer.jpg" alt="Demon Slayer Infinity Castle" class="img-fluid">
-            <figcaption class="text-muted small mt-1">Source : ufotable / Aniplex</figcaption>
+            <figcaption class="text-muted small mt-1">Source : Ufotable</figcaption>
           </figure>
 
           <h4>Une prouesse d’animation à couper le souffle</h4>
           <p>
-            Difficile d’imaginer qu’<strong>ufotable</strong> puisse encore se surpasser après « Mugen Train » et « Swordsmith Village ».
+            Difficile d’imaginer qu’<strong>Ufotable</strong> puisse encore se surpasser après « Mugen Train Arc ».
             Et pourtant, le studio signe ici un spectacle visuel d’une ampleur inédite.
             Les mouvements de caméra virevoltent dans un espace mouvant, où le <em>Château de l’Infini</em> semble respirer, se tordre et se reconstruire à chaque instant.
           </p>
@@ -71,7 +68,7 @@
 
           <h4>Une intensité dramatique constante</h4>
           <p>
-            Le film rend hommage à tous ses héros, vivants ou disparus.
+            Le film rend hommage à tous ses héros, vivants ou pas.
             Les sacrifices des <strong>Hashira</strong> trouvent ici leur pleine résonance, et chaque scène d’adieu est empreinte d’une sincérité déchirante.
             <strong>Tanjiro</strong>, plus que jamais, incarne l’espoir au milieu du désespoir.
           </p>
@@ -123,7 +120,7 @@
   </main>
 
   <footer class="container text-center py-3">
-    <small class="text-secondary">© 2025  don't know what I'm doing</small>
+    <small class="text-secondary">© 2025 I don't know what I'm doing</small>
   </footer>
 
   <script src="/src/js/script.js"></script>
