--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
       <aside class="col-md-4 col-lg-3">
         <div class="card bg-dark text-light p-3 mb-4 border-0">
-          <h6 class="mb-3"><i class="bi bi-film"></i> Articles similaires</h6>
+          <h6 class="mb-3"> Articles similaires</h6>
 
           <div class="mb-3">
             <img src="/assets/images/jjk.jpg" alt="Jujutsu Kaisen" class="img-fluid rounded">
